-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b08
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045391 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8039906 | 8u20 | Goetz Lindenmaier | P4 | Closed | Fixed | b10 |
| JDK-8053310 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
In init_system_properties_values() NEW_C_HEAP_ARRAY is defined to malloc.
After calls to this macro, the result was checked for NULL.
Actually, NEW_C_HEAP_ARRAY exit the vm if it can not allocate memory.
Remove the misleading malloc macro and remove unnecessary checks for null
in os_linux.cpp and os_aix.cpp.
After calls to this macro, the result was checked for NULL.
Actually, NEW_C_HEAP_ARRAY exit the vm if it can not allocate memory.
Remove the misleading malloc macro and remove unnecessary checks for null
in os_linux.cpp and os_aix.cpp.
- backported by
-
JDK-8045391 Clean up misleading usage of malloc() in init_system_properties_values()
-
- Resolved
-
-
JDK-8053310 Clean up misleading usage of malloc() in init_system_properties_values()
-
- Resolved
-
-
JDK-8039906 Clean up misleading usage of malloc() in init_system_properties_values()
-
- Closed
-