8038201: Clean up misleading usage of malloc() in init_system_properties_values()

Remove the misleading malloc macro and cleanup the code

Reviewed-by: dsamersoff, kvn